# escompliance-agent

./: LISENCE  main.py  pyproject.toml
src/elasticsearch_setup/: setup_indices.py
src/elasticsearch_setup/indices/: compliance_events.json  inspections.json  permits.json  regulations.json
